@@ -163,7 +163,7 @@ EXPORTS
         ?removeShadowRoot@Element@WebCore@@QAEXXZ
         ?scrollElementToRect@FrameView@WebCore@@QAEXPAVElement@2@ABVIntRect@2@@Z
         ?setDOMException@WebCore@@YAXPAVExecState@JSC@@H@Z
-        ?setMockScrollbarsEnabled@Internals@WebCore@@QAEXPAVDocument@2@_NAAH@Z
+        ?setMockScrollbarsEnabled@Settings@WebCore@@SAX_N@Z
         ?setPagination@Page@WebCore@@QAEXABUPagination@12@@Z
         ?setResourcesDataSizeLimitsFromInternals@InspectorController@WebCore@@QAEXHH@Z
         ?setScrollbarsSuppressed@ScrollView@WebCore@@QAEX_N0@Z
